change: Readying for Docker